Enhance testing setup and add button component tests

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,7 +26,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": ["@vitest/browser/providers/playwright"]
   },
   "include": ["src"]
 }
