Refactor package name in package.json to remove scope

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@felipeferrarini/design-system-package",
+  "name": "design-system-package",
   "version": "0.0.0",
   "type": "module",
   "files": [
